--- a/index.html
+++ b/index.html
@@ -21,26 +21,7 @@
     <div class="VKMusic-wrapper">
         <div class="VKMusic-wrapper__grid"></div>
         <div class="l-wide_container VKMusic-container">
-            <div id="vk-music-container" class="VKMusic">
-                <!-- <div class="VKMusic-result">
-                    <div class="VKMusic-result__head">
-                        <div class="VKMusic-result__result">1 из 10 правильных ответов</div>
-                        <div class="VKMusic-result__title">Пропускаю, пропускаю!</div>
-                        <div class="VKMusic-result__subtitle">На шоу Валдиса Пельша вам лучше не ходить</div>
-                        <div class="VKMusic-result__share"></div>
-                        <div class="VKMusic-result__restart-btn">Пройти еще раз</div>
-                    </div>
-                    <div class="VKMusic-result__bottom">
-                        <div class="VKMusic-subscribe">
-                            <div class="VKMusic-subscribe__title">
-                                <span>Подписка на Boom и<br>музыку «ВКонтакте»</span>
-                                <div class="VKMusic-subscribe__title-icon"></div>
-                            </div>
-                            <button class="VKMusic-subscribe__btn VKMusic-subscribe__btn--vk">Получить</button>
-                        </div>
-                    </div>
-                </div> -->
-            </div>
+            <div id="vk-music-container" class="VKMusic"></div>
         </div>
     </div>
 
@@ -51,11 +32,6 @@
             s.async = true;
 
             var container = d.getElementById('vk-music-container');
-
-            // var container = d.getElementById('specialContainer');
-            // var newContainer = container.cloneNode(true);
-
-            // container.parentNode.replaceChild(newContainer, container);
 
             if (container) {
                 s.onload = function() {
